packages/ast/test/snapshots/valid/complex-contents/output.js
module.exports = {
  ast: {
    type: "XMLDocument",
    rootElement: {
      type: "XMLElement",
      namespaces: [],
      name: "note",
      attributes: [],
      subElements: [],
      textContents: [],
      position: { startOffset: 9 },
      syntax: {
        openName: { image: "note", startOffset: 10 },
        closeName: { image: "note", startOffset: 17 }
      }
    },
    position: { startOffset: 0 },
    prolog: { type: "XMLProlog", attributes: [], position: { startOffset: 0 } }
  }
};
